# RFS-SLAM

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  License  README.md  rfsslam-config-version.cmake.in  rfsslam-config.cmake.in
cfg/: fastslam2dSim.cfg  fastslam2dSim.xml  fastslam_VictoriaPark.xml  fastslam_VictoriaPark_artificialClutter.xml  mhfastslam2dSim.cfg  mhfastslam2dSim.xml  mhfastslam_VictoriaPark.xml  mhfastslam_VictoriaPark_artificialClutter.xml  rbphdslam2dSim.cfg  rbphdslam2dSim.xml  rbphdslam_VictoriaPark.xml  rbphdslam_VictoriaPark_artificialClutter.xml  simulator2d.cfg
cmake/: FindEigen.cmake  FindPerftools.cmake
data/: README
data/VictoriaPark/: DRS.txt  Documentation.txt  GPS.txt  Sensors_manager.txt
include/: BruteForceAssignment.hpp  COLA.hpp  CostMatrix.hpp  FastSLAM.hpp  Frame.hpp  GaussianMixture.hpp  HungarianMethod.hpp  JCBB.hpp  KalmanFilter.hpp  KalmanFilter_RngBrg.hpp  KalmanFilter_VictoriaPark.hpp  Landmark.hpp  MatrixPermanent.hpp  Measurement.hpp  MeasurementModel.hpp  MeasurementModel_Rng1D.hpp  MeasurementModel_RngBrg.hpp  MeasurementModel_RngBrg_amplitude.hpp  MeasurementModel_VictoriaPark.hpp  MeasurementModel_XY.hpp  MurtyAlgorithm.hpp  OSPA.hpp  Particle.hpp  ParticleFilter.hpp  PermutationLexicographic.hpp  Pose.hpp  ProcessModel.hpp  ProcessModel_Ackerman2D.hpp  ProcessModel_Odometry1D.hpp  ProcessModel_Odometry2D.hpp  RBPHDFilter.hpp  RandomVec.hpp  RandomVecMathTools.hpp  SpatialIndexBox.hpp  SpatialIndexTree.hpp  TimeStamp.hpp  Timer.hpp  Trajectory.hpp  Tree.hpp
include/misc/: MemProfile.hpp
scripts/VictoriaPark/: animate_VictoriaPark.py
scripts/batchSim/: batchSim_fastslam.bash  batchSim_mhfastslam.bash  batchSim_rbphdslam.bash  batchSim_rbphdslam_clusterProc.bash  batchSim_rbphdslam_emptyStrat.bash  batchSim_rbphdslam_singleStrat.bash  plotBatchSimResults.py
scripts/componentTesting/: spatialIndexTreeTestVisualizer.py
scripts/deprecated/: combineImages.sh  generateVideo.sh
scripts/misc/: appendLicense.sh  gource.sh
scripts/sim/: animate2dSim.py  plotError2dSim.py  plotErrorCompare2dSim.py
src/: BruteForceAssignment.cpp  CostMatrix.cpp  Frame.cpp  GaussianMixture.cpp  HungarianMethod.cpp  KalmanFilter_RngBrg.cpp  MatrixPermanent.cpp  Measurement.cpp  MeasurementModel.cpp  MeasurementModel_Rng1D.cpp  MeasurementModel_RngBrg.cpp  MeasurementModel_VictoriaPark.cpp  MeasurementModel_XY.cpp  Measurement_Odometry2D.cpp  MurtyAlgorithm.cpp  PermutationLexicographic.cpp  Pose.cpp  ProcessModel.cpp  ProcessModel_Ackerman2D.cpp  ProcessModel_Odometry1D.cpp  ProcessModel_Odometry2D.cpp  RBPHDFilter.cpp  TimeStamp.cpp  Timer.cpp  analysis2dSim.cpp  convertLogFiles.cpp  fastslam2dSim.cpp  fastslam_VictoriaPark.cpp  rbphdslam2dSim.cpp  rbphdslam_VictoriaPark.cpp  simulation1d.cpp  simulation2d.cpp
src/examples/: linearAssignment_CostMatrixPartitioning.cpp  linearAssignment_LexicographicOrdering.cpp  linearAssignment_MurtyAlgorithm.cpp  ospaError.cpp  spatialIndexTree.cpp
src/misc/: memProfile.cpp
test/: MatrixPermanentTest.cpp  MatrixPermanentTest.hpp  SpatialIndexTreeTest.cpp  SpatialIndexTreeTest.hpp
tools/VictoriaPark/: DataConvert_Matlab_to_ASCII.m
tools/matlab/: readAndPlayCPP2dSimData.m
